2009-04-03  Dan Winship  <danw@gnome.org>

	Bug 577360 – handle cookies with same name but different path

	* libsoup/soup-cookie-jar.c (soup_cookie_jar_add_cookie): check
	both name and path when matching cookies; "foo=one; path=/bar"
	should not replace "foo=two; path=/". They are separate cookies.

	Reported by Alexander V. Butenko.

2009-04-02  Dan Winship  <danw@gnome.org>

	Bug 577630 – libsoup should ignore broken Content-Type headers

	* libsoup/soup-message-headers.c (content_type_setter): Ignore
	Content-Type if it's not at least minimally syntactically correct.
	(soup_message_headers_get_content_type): Document that.

	* tests/header-parsing.c (do_content_type_tests): test it.

2009-04-02  Dan Winship  <danw@gnome.org>

	Bug 577728 – soup_header_g_string_append_param should handle NULL values

	* libsoup/soup-headers.c (soup_header_g_string_append_param):
	allow @value to be %NULL.

	* tests/header-parsing.c (do_append_param_tests): test
	soup_header_g_string_append_param()

2009-04-02  Dan Winship  <danw@gnome.org>

	Bug 576760 – soup_message_headers_get_content_type returns bad headers

	* libsoup/soup-message-headers.c (soup_message_headers_get_one)
	(soup_message_headers_get_list): New replacements for
	soup_message_headers_get(), indicating explicitly whether the
	caller expects the header to be a list or not; for non-list-type
	headers, if there's more than one, the second one should be
	ignored rather than concatenated to the first.
	(soup_message_headers_get): deprecate this.

	* libsoup/*.c:
	* tests/*.c: Update to use soup_message_headers_get_one() or
	_get_list() as appropriate.

	* tests/header-parsing.c (do_content_type_tests): Add some tests
	of Content-Type parsing/setting, including making sure that
	duplicate Content-Type headers are ignored.

	* docs/reference/libsoup-2.4-sections.txt: update

2009-03-27  Dan Winship  <danw@gnome.org>

	Bug 576583 – Tests fail if "localhost" resolves to ::1
